# workshop_airflow

./: exemplo_00.py  pyproject.toml  requeriments.txt
frontend/pipeline/: minha_etl.py
